fixed height align with logo

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,3 @@
-
-
 .main {
   min-height: 100vh;
   display: grid;
@@ -15,6 +13,6 @@
   box-shadow: -35px 4px 63px -38px rgba(0,0,0,0.62);
   -webkit-box-shadow: -35px 4px 63px -38px rgba(0,0,0,0.62);
   -moz-box-shadow: -35px 4px 63px -38px rgba(0,0,0,0.62);
-  padding-top: 3rem;
+  padding-top: 1.4rem;
   padding-left: 2rem;
 }
